--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -18,8 +18,8 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694142.md#1" target="_blank">台北101成共谍大本营？ 学者：代号小香港</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1808231139272378-150x120.jpg" align ="left"></a>自称是中国间谍的男子王立强投诚澳洲后，爆出中共如何渗透台湾，以及特务在港台间的布线网，绑架异议人士等，引发各界讨论。特别的是，被视为台湾地标的台北101则被爆出是共谍出入大本营。学者分析，根据国安单位长期掌握的情资显示，台北101早被视为红色势力根据地，代号为“小香港”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695361.md#1" target="_blank">台肥借贷韩国瑜买房案 农委会提6疑点移送北检</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/56cee228550dbd9e2e281fa6588e4bbb-150x120.jpg" align ="left"></a>日前媒体报导，国民党总统候选人、高雄市长韩国瑜向台肥公司贷款，购买北市“R5无双─日升月恒”预售屋建案，台肥最大股东农委会也在2日召开记者会，由农委会副主委陈骏季对外说明案件的6项疑点，检附相关资料移请台北地检署及相关业务主管机关进行调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695338.md#1" target="_blank">中共统战不分蓝绿 前国防部长爆曾被邀请</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ef4677cd5fd0c65610d88bc6fd32caff-150x120.jpg" align ="left"></a>中共积极对台湾进行渗透，前国防部长蔡明宪2日爆料，他2008年卸任、隔年年初，中共国台办就透过台商邀请，他因为察觉统战意图断然拒绝。蔡明宪警告，中共对台的统战，不只是针对国民党，民进党的政治人物也是统战对象，提醒国人、政府应该更重视台湾被渗透统战的严重性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694733.md#1" target="_blank">抵抗外国干预 澳洲将成立特别情报工作组</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7f9c589924aeb0d74cb3955a3cde7b44-150x120.jpg" align ="left"></a>为应对前所未有的外国干预和间谍活动对国家安全的威胁，澳洲将成立一个由澳洲安全情报局（ASIO）、澳洲信号局（ASD）和国防情报机构负责的精英情报特别工作组。这将使澳洲处于虚拟战争状态。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 5:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11692914.md#1" target="_blank">向心为何接触宫庙地产 专家：统战切入点</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11692914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dddfc73fed4622988dc481ba6d33afbb-150x120.jpg" align ="left"></a>牵涉共谍案的向心与龚青夫妇已遭到限制出境，据台湾媒体日前的报导，向心与龚青近年频繁到台湾，向心青睐与台湾的地产界人士和特异功能人士接触。专家分析，特异功能人士多在台湾的宫庙里，因此恐与中共渗透台湾宫庙有关系，而台湾的建商多有较好的政商关系，这点可能也是向心与他们接触的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705391.md#1" target="_blank">赴白宫见川普 郭台铭：谈美中贸易与经济</a><br></h3>鸿海创办人郭台铭与太太曾馨莹在美东时间5日傍晚参加白宫耶诞派对，入场前说，今天是参加派对的心情，不愿谈台湾政治。在会后受访时表示，有见到美国总统川普，对于谈话内容“还是保密”，但透露听了一些川普对于经济、中美贸易、鸿海在美国投资等议题的看法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704422.md#1" target="_blank">石家庄一中学教练被家长刺死 曾是省男排主力</a><br></h3>近日，石家庄一所重点中学的男排主教练、前河北男排主力二传手马某，被一位队员家长杀害。初步调查，原因是该家长与马某在对孩子训练问题产生矛盾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703047.md#1" target="_blank">江苏男子掐死8岁亲生儿子 网民吁严惩</a><br></h3>大陆乱象万千。近期，江苏宿迁一名男子朱某杀害自己刚满8岁的儿子，而后却辩称儿子身体不好，帮他解脱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701612.md#1" target="_blank">被爆扫楼式筹款 “水滴筹”陷信用危机</a><br></h3>中国重病众筹平台“水滴筹”近日被曝陷入信任危机，平台审查不严格，又没有相关法律对互联网筹款平台进行监管，民众担心捐款人被消费、被欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
