--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -26,8 +26,8 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/6/n11435065.md#1" target="_blank">湖北山洪已致13死 村民:都是简易板房住户</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/6/n11435065.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/11-16-150x120.jpg" align ="left"></a>湖北十堰市郧阳区柳陂镇6日凌晨因暴雨引发山洪，已致8人遇难，8人失联。当地村民表示，遇难的都是因修路拆迁补偿不到位住简易住板房里的村民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月06日 11:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/5/n11432196.md#1" target="_blank">大陆遭遇洪涝干旱虫害灾情 粮食大获丰收？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/5/n11432196.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1154677113-600x400-150x120.jpg" align ="left"></a>今年上半年中国南方遭洪灾雨涝，北方遇高温干旱，不少地区出现粮食绝收，再加上“粮食杀手”虫害袭击，农作物受灾非常严重。7月中旬，中共却高调公布上半年夏粮丰收。在贸易战的背景下，中国粮食现况到底怎样？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 9:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/4/n11430749.md#1" target="_blank">吉林水上乐园惨剧  人工海啸致44人伤</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/4/n11430749.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Screen-Shot-2019-08-04-at-5.45.41-PM-e1564956605377-150x120.png" align ="left"></a>一个人为的海啸巨浪，造成数十名游泳者受伤。中国一家水上乐园随后关闭了“海啸池”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 6:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/26/n11477954.md#1" target="_blank">广东大巴车翻车 至少7死11伤</a><br></h3>8月26日0时许，一辆大巴车在广东阳江境内的沈海高速路上发生侧翻事故，导致至少7死11伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月26日 2:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/20/n11465774.md#1" target="_blank">中国旅行团老挝遇车祸 14死31伤</a><br></h3>8月19日下午，一辆载有中国游客的老挝当地旅游大巴在从万象市前往琅勃拉邦市途中发生严重车祸，遇难人数已上升至14人，31名伤员已到当地医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 9:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/6/n11434229.md#1" target="_blank">贵州老干妈厂房突发大火 黑烟十余米高</a><br></h3>8月6日，贵州贵阳的老干妈厂区一厂房失火，现场浓烟高达十余米，同时伴有刺鼻的焦臭味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月06日 4:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/4/n11430561.md#1" target="_blank">湖北鹤峰突发山洪已致7死 10多人被困</a><br></h3>8月4日傍晚，湖北恩施鹤峰一峡谷景区内因暴雨突发山洪。截至目前，已致7名游客死亡，还有10多人失联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 3:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
