--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -31,10 +31,7 @@ Kia Telluride的外型以方方正正为设计概念，有别于Sorento，进风口设计仍是.........<
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695313.md#1" target="_blank">他带走失爱犬最爱的玩具去寻找 奇迹会发生吗？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695313.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d40e4bfe200562da01797e72df6e848f-150x120.jpg" align ="left"></a>你看过一位满脸胡子、长得性格理智的成熟男子哭泣吗？因为他以为永远找不到他丢失的心爱狗狗，让他做了好几天恶梦，在失而复得之后，他竟然情绪激动的哭了出来！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691645.md#1" target="_blank">教堂夜间开放 200街友排排躺祈祷椅上一夜好眠</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691645.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1758b0c713b4f2c6a4cbb54e5812eeb8-150x120.jpg" align ="left"></a>天一黑，旧金山一家教堂的门口就排满了人，手上还拎着大包小包的，看起来和来这里做礼拜的教友不太一样；原来他们是一些游民，该教堂15年来每晚开放给几百位无家可归者，他们可以在教堂里睡上一夜好觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691587.md#1" target="_blank">老师画7.5小时的黑板画送毕业生 学生超感动</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9681fffc04cf69033cd2bf559db0fb01-150x120.jpg" align ="left"></a>学校上课的黑板在传统的印象中，那是老师用来传道、授业、解惑的用具，同时也是和学生沟通的工具，想必当过学生的人对它都有一股严肃敬畏的心；但是现在却有三位老师不谋而合的使用黑板创作让人惊叹的美丽画作，而且还很振撼人心呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700004.md#1" target="_blank">美国大学寻找的人才：6种脱颖而出的方法（上）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700004.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1478225066-2-150x120.jpg" align ="left"></a>编译：艾薇?大纪元
-面对越来越多的美国大学申请者，在大学申请的激烈竞争中，如何让自己脱颖而出？专家建议，学生应列出目标学校的简短清单，表现出对所选学校的兴趣，率先搜索相关信息，并做真实的自己。
-
-对学习的热情和积极主动，以及对申请的学校有浓厚的兴趣，这些是学生能否进入大学的关键。但在日益竞争激烈的环境下，这只是大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:51 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691798.md#1" target="_blank">塔楼太高 西澳Applecross公寓审批三度被拒</a><br></h3>最近，西澳开发商Mustera Property在Applecross预计承建一座有垂直花园（vertical garden）的环保公寓项目审批第三次遭到当地开发评组驳回，理由为高度超过当地市政府规划要求，目前此开发商正在考虑其它方案以推动项目开展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/11/n11647808.md#1" target="_blank">优质写字楼需求增加 珀斯写字楼市场即将火爆</a><br></h3>商业地产集团Sheffield Property高级写字楼市场专家最近表示，一年来，对珀斯市中心优质办公楼的需求明显增加，这意味着市场已开始反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691683.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】房子出租 物业经理需应对的棘手问题</a><br></h3>要成为物业管理经理，首先必须要获得执照。获得执照不难，但是处理物业管理并非易事，需要更多的经验和手段。结合几年物业管理的经验，我整理了房子出租会出现的三个棘手问题，供读者与业主参考。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
