--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,7 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712285.md#1" target="_blank">王友群：邓炳强新官上任 未来结局如何？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zEogqcK-1-800x450@1200x1200-600x400-1-1-150x120.jpg" align ="left"></a>近日，香港警务处新任处长邓炳强到北京，拜访了中共公安部长赵克志、中央政法委书记郭声琨等。据邓炳强讲，中共对香港警方工作给予肯定，表示将“全力支持”他继续“止暴制乱”；他也一再表决心将全力以赴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:42 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711506.md#1" target="_blank">杜彼得：愁因风雪起 隐者自怡悦</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-11-150x120.jpg" align ="left"></a>每次在脸书看到年轻一代华人，放上婴儿或正在成长幼儿的相片，我们都会仔细的观赏数回，手会情不自禁去点赞，“性之所至”还会回二句留言，给做父母的人打气。或许有人会说，喂！你是不是很无聊，可是你若从我们一直重视群体荣耀与否的角度去看，肯定会了解，“传承”对一个族裔的重要性，尤其是我们身处在美国这个大染缸的社会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711479.md#1" target="_blank">周晓辉：当北大到了高调炫耀金钱时</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-127-150x120.jpg" align ="left"></a>大学的职责是为养育自己的社会服务，其根本目的不是为了赚钱，不是为了成为公司，不是去当国家安全的工具。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711421.md#1" target="_blank">颜丹：华为为何做不了光明正大的企业？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1153137465-600x400-150x120.jpg" align ="left"></a>正如华为的阴险恶毒终于被无数中国人看穿，中共与生俱来的恶魔本性也终将尽显。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 12:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711010.md#1" target="_blank">海风：当心！海外华人亲共有风险</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711010.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190920145543100699-150x120.jpg" align ="left"></a>要过年了，按照惯例，中国政府每年都要组织海外亲共组织庆祝中国春节。政府关心海外华人，华人心系祖国。从这个角度来看，这是一种人文情怀，无可非议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/12/1412051022522639-150x120.jpg" align ="left"></a>曾任中华民国行政院院长、国防部部长、总统府资政等职的阎锡山说过一句特别精辟的话——“中共是最能迷惑人的九尾狐狸精”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:11 PM			</td></tr>
@@ -17,10 +14,10 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708009.md#1" target="_blank">严晓：也谈洗脑</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/42019-06-24.05-150x120.jpg" align ="left"></a>“洗脑”本是极权体制的专利，最近我却发现，中共媒体和其代言人竟也拿着它向香港青少年挥舞，说是他们之所以成为民主自由斗士，是被外来反动势力洗了脑。这倒让我在惊诧之余，有了跟他们理论一番的兴趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707812.md#1" target="_blank">【名家专栏】弹劾“专家组”没告诉你这些事</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707812.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/scholars-at-impeachment-hearing-1200x814-150x120.jpg" align ="left"></a>这篇短文做了美国众议院司法委员会（House Judiciary Committee）的“专家证人”小组应该做却没能做到的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8_1233928_2e56d62d8b907cf5d5b2fd3d9f96bc3c-600x400-150x120.jpg" align ="left"></a>受其连累，他在外交部当医生的二儿子，在中国医学科学院工作的四儿子，也都被打成“右派”，最小的儿子则被安上了“组织反革命”罪，被劳动改造。李康年精神和身体受到了双重打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:46 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712381.md#1" target="_blank">祝君安：木兰花·辛酸的回归</a><br></h3>香港回归入魔口
-凄风苦雨人消瘦
-烟雾弹里觅自由
-街道雨伞度春秋......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 12:17 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706176.md#1" target="_blank">王友群：海外“侨领”应以黄克锵为戒</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706176.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/chnzw100517003-150x120.jpg" align ="left"></a>纽约是海外法轮功学员人数最多的一个城市。在纽约许多著名的景点，如时代广场等，到处可见法轮功学员讲真相的身影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:08 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706958.md#1" target="_blank">海风：亲共华人是“爱国”还是在“害国”？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/IMG_3902-copy-600x400-150x120.jpg" align ="left"></a>离台湾大选还不到40天，又有两亲共人士被台湾法院判刑入狱。从各大媒体上可以看到，从去年以来，几乎每天都有中共间谍或中共代理人在各国被捕的报导。在这其中，有些人居然还不知道自己的行为是在犯罪，直到警察亮出证据才明白自己“中招”了。澳洲一位亲共华侨因涉嫌一起政治献金案被捕后，他还理直气壮地问记者，难道我爱国也犯罪吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:53 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706930.md#1" target="_blank">王友群：“香港人权法”有助香港国际地位</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db602cd78fca64_ttl7daykzf_86c475e41a499-150x120.jpg" align ="left"></a>11月27日，美国总统川普签署《香港人权与民主法案》。中共立即炸了锅，“强烈抗议”、“坚决反对”等都跑出来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:43 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank">胡少江：北京在香港遭遇滑铁卢之后</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3019-11-2210.50-150x120.jpg" align ="left"></a>中央和香港特区两级政府在香港区议会的选举中输得很难看！从表面上看在选举中输掉的仅仅是建制派在区议会的多数席位，但是这次选举本质上是一次香港的草根民主派与北京操纵的建制派的对垒，他们之间的输赢绝对不仅仅是候选人个人的问题，而是他们所代表的政治主张的胜败。这次选举实际是一次全民公投，即是对中央政府对香港政策的一次公投，是对.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711158.md#1" target="_blank">吕锡民：水下物联网如何实现智能海洋</a><br></h3>对人类而言，海洋不仅拥有大量石油、天然气和鱼类资源，而且还是国际贸易的重要渠道和潜在能源，如潮汐能和洋流发电。然而，由于水下环境的复杂性和水下设备的昂贵，海洋仍然缺乏智能和方便上的应用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711120.md#1" target="_blank">向真：中共操弄法律 预先裁决</a><br></h3>近日明慧网报导，广东省法轮功学员林丽珍，与儿子吴朝棋、妹妹林燕梅一家三人被国保大队非法绑架，茂名市中级法院通知律师在十一月十五日提交辩护词。十二月二日，中级法院非法裁定：维持原判。离谱的是，裁定书的落款日期却是二零一九年十一月十二日。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11709675.md#1" target="_blank">【投书】一位大陆律师与司法局律协的对话</a><br></h3>《刑事诉讼法》第35条：律师的职责辩护人的责任是根据事实和法律，提出证明犯罪嫌疑人、被告人无罪、罪轻或者减轻、免除其刑事责任的材料和意见，维护犯罪嫌疑人、被告人的合法权益。 
