--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/24/n11677870.md#1" target="_blank">天地清明引(120) 明光殒－棠棣花凋1</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/24/n11677870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/flower-2516146_1280-150x120.jpg" align ="left"></a>白允儿回禀师父，而后回返义军，找寻白门柳。是夜，正在赶路，忽然草丛之中，燃起一个火星儿。转眼之间，四周起焰，白允儿身陷火海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/27/n11685250.md#1" target="_blank">许其正：海唱</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/27/n11685250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/1711221056351758-150x120.jpg" align ="left"></a>海浪在轻轻地吟唱着一首诗。  一波接着一波，海浪在涌起，向海滩涌进，激起了许多白色泡沫，它们的吟唱便传来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/27/n11684746.md#1" target="_blank">台湾古典诗：漫游台江</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/27/n11684746.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/3c4295613bceb71620213cd5bf19d0f3-150x120.jpg" align ="left"></a>台江激浪逐波流，鹿耳烟霞任去留， 雁塞他年风飒飒，鲫潭此际水悠悠；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/9/n11644736.md#1" target="_blank">【品读唐诗】一首诗成就一座文化名楼</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/9/n11644736.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/705a5ae71a78c086b70772e86652f113-150x120.png" align ="left"></a>今天的人们在总结传统文化的时候，很喜欢做“四大”的概括，比如四大美女、四大发明、四大名著，不一而足。那么朋友们，你知道中国古代还有四大名楼吗，它们分别是湖北武汉的黄鹤楼、江西南昌的滕王阁、湖南岳阳的岳阳楼，还有山西永济的鹳雀楼。这几座名楼修建的初衷，有的是为某位贵族而建，有的是用于军事防御，但无一例外的，它们之所以能够.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:51 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/29/n11690354.md#1" target="_blank">诗歌：回首</a><br></h3> 往昔风狂雨瓢泼 满江风浪夜如何 今朝高处回首看 一路诗韵一路歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/28/n11687716.md#1" target="_blank">诗歌：感恩大法</a><br></h3>茫茫人海情缠绵，恩怨情仇迷风烟 乍惊回天梯高悬，法喜佛雨浇心田......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/28/n11687681.md#1" target="_blank">五律：钟</a><br></h3> 大音挥壮伟，高响激苍茫。 晓色敲魂梦，晚霞惊客肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/28/n11687667.md#1" target="_blank">诗歌：友聚</a><br></h3> 挚友聚一门，品茶论古今。 畅抒胸中意，俱是蓬来人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:19 AM			</td></tr>
