--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -18,6 +18,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657998.md#1" target="_blank">【命理篇】有钱有势就会幸福和快乐吗？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657998.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/acc207070a1285bd594565f13a547761-150x120.png" align ="left"></a>“河南杨花谢，河北李花荣。杨花飞去落何处，李花结果自然成。”隋炀帝听到宫女唱出这民谣谶语，突然心生“天启”的感触。富贵、富丽“迷楼”中的隋炀帝感触是否来得太晚？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/25/n11678243.md#1" target="_blank">天地清明引(122) 明光殒－棠棣花凋3</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/25/n11678243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/flower-2516146_1280-2-150x120.jpg" align ="left"></a>五大派掌门接信，言圣林七子走后，帮众玄毒复发。众人大惊，不知何故。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank">香港，你会好起来吗？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/520231ac92e9008b0d77409b6cbdb325-150x120.jpg" align ="left"></a>那年你带我上太平山顶，我的眼里是维多利亚港的醉人景观，你的眼里是对九七后的茫然与期盼。隔年你来台北，我带你上阳明山，双城都有美丽的山，亲吻我们的风，后来却很不一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 6:51 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695158.md#1" target="_blank">唐浩：将变</a><br></h3>赤匪妖术罄   良知破迷明   秋风红潮落   春旭两岸晴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693392.md#1" target="_blank">诗歌：遥望</a><br></h3>冷寂寒冬里， 长河独远巡。 风吹枯叶尽， 水结薄冰新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693686.md#1" target="_blank">诗歌：无题</a><br></h3>萧萧西风过北疆 瑟瑟寒枝落尽芳 千载沧桑浑一梦 夜阑卧听雨打窗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11695164.md#1" target="_blank">唐浩：史诗</a><br></h3>正气摇天笔   良知催泪滴   丹血舞神墨   青史留胜迹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:38 PM			</td></tr>
@@ -29,6 +30,5 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693114.md#1" target="_blank">台湾古典诗：奇迹</a><br></h3> 回流科技正萌芽，带动台湾就业加， 再创四龙奇迹造，振兴经济福邦家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693111.md#1" target="_blank">调笑令．婆罗花开</a><br></h3> 珍惜， 珍惜， 真念金毫神笔。 戳穿红恶谎言， 真相真言善传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11692314.md#1" target="_blank">诗歌：决裂中共</a><br></h3> 世人觉醒 决裂中共向新生 香港全民反迫害......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 10:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/29/n11690354.md#1" target="_blank">诗歌：回首</a><br></h3> 往昔风狂雨瓢泼 满江风浪夜如何 今朝高处回首看 一路诗韵一路歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
