--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -25,9 +25,9 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/8/n11440080.md#1" target="_blank">留守悲歌 河南信阳6名儿童摘菱角溺亡</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/8/n11440080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/391b7fd4c25a4932a1fcb4b07850f372-150x120.jpg" align ="left"></a>大陆再发生一起留守儿童的悲剧。河南信阳罗山县7日晚有6名儿童摘菱角时落水溺亡，最大12岁，最小的才5岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月09日 1:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/7/n11436139.md#1" target="_blank">广东化工厂深夜爆炸 巨响后升起“蘑菇云”</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/7/n11436139.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/89c38715062a5e73e080b9960cc3da00-150x120.jpeg" align ="left"></a>广东清远市一家化工厂，8月6日深夜约11点半发生爆炸起火，天空出现“蘑菇云”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月07日 1:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/6/n11435065.md#1" target="_blank">湖北山洪已致13死 村民:都是简易板房住户</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/6/n11435065.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/11-16-150x120.jpg" align ="left"></a>湖北十堰市郧阳区柳陂镇6日凌晨因暴雨引发山洪，已致8人遇难，8人失联。当地村民表示，遇难的都是因修路拆迁补偿不到位住简易住板房里的村民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月06日 11:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/5/n11432196.md#1" target="_blank">大陆遭遇洪涝干旱虫害灾情 粮食大获丰收？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/5/n11432196.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1154677113-600x400-150x120.jpg" align ="left"></a>今年上半年中国南方遭洪灾雨涝，北方遇高温干旱，不少地区出现粮食绝收，再加上“粮食杀手”虫害袭击，农作物受灾非常严重。7月中旬，中共却高调公布上半年夏粮丰收。在贸易战的背景下，中国粮食现况到底怎样？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 9:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/29/n11484684.md#1" target="_blank">海南儋州市那大镇突发龙卷风 至少8死2伤</a><br></h3>8月29日凌晨3时半左右，海南儋州市市区中兴大街与工业路交叉口附近区域突发龙卷风，导致那大镇两处工地宿舍倒塌，8人死亡，2人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 12:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/28/n11482732.md#1" target="_blank">杭州一小区路面突然塌陷 居民楼倾斜</a><br></h3>8月28日，浙江省杭州闹市区的建国北路树园小区门口路段突然出现地面塌陷，冒出大量黄烟，该小区31幢出现倾斜。同一天，广东省深圳罗湖区和平新居一栋6层单身公寓楼也突然倾斜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 6:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/26/n11477954.md#1" target="_blank">广东大巴车翻车 至少7死11伤</a><br></h3>8月26日0时许，一辆大巴车在广东阳江境内的沈海高速路上发生侧翻事故，导致至少7死11伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月26日 2:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/20/n11465774.md#1" target="_blank">中国旅行团老挝遇车祸 14死31伤</a><br></h3>8月19日下午，一辆载有中国游客的老挝当地旅游大巴在从万象市前往琅勃拉邦市途中发生严重车祸，遇难人数已上升至14人，31名伤员已到当地医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 9:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/8/6/n11434229.md#1" target="_blank">贵州老干妈厂房突发大火 黑烟十余米高</a><br></h3>8月6日，贵州贵阳的老干妈厂区一厂房失火，现场浓烟高达十余米，同时伴有刺鼻的焦臭味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月06日 4:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
